# code-snippets

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/button/: button.tsx
src/components/code-editor/: code-editor.tsx
src/components/collection-list/: collection-list.tsx  create-collection-button.tsx
src/components/color-picker/: color-picker.tsx
src/components/context-menu/: context-menu.tsx
src/components/dropdown/: dropdown.tsx
src/components/input/: input.tsx
src/components/navbar/: create-snippet-button.tsx  navbar.tsx
src/components/separator/: separator.tsx
src/components/settings/: settings-button.tsx
src/components/sheet/: sheet.tsx
src/components/sidebar/: create-group-button.tsx  sidebar.tsx
src/components/snippet/: create-snippet-page.tsx  snippet-view.tsx
src/components/snippet-list/: snippet-list.tsx
src/components/toaster/: toaster.tsx
src/context/: AppStateContext.tsx
src/utils/: color_utils.ts  editor_utils.ts
